--- a/scripts/artifacts/README.jinja
+++ b/scripts/artifacts/README.jinja
@@ -1,6 +1,10 @@
 # Namada Mainnet Genesis files
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla mauris magna, blandit non posuere a, tempor vel nibh. Integer lacinia quam tempor hendrerit porta. Ut quis congue elit.
+The set of parameters and transactions that will create the namada genesis file.
+
+If you have received an allocation, check the [docs on how to make a pre-genesis transaction.](https://docs.namada.net/networks/starting-network/genesis-flow/participants)
+
+If you need help, feel free to [reach out on discord](https://discord.gg/AsPCKgW3)!
 
 ## Voting power distribution
 
