--- a/scripts/artifacts/README.jinja
+++ b/scripts/artifacts/README.jinja
@@ -9,7 +9,7 @@ If you need help, feel free to [reach out on discord](https://discord.gg/AsPCKgW
 ## Voting power distribution
 
 {% if validators|length > 0 %}
-![Voting Power Distribution](../images/validators.png "Voting Power Distribution")
+![Voting Power Distribution](images/validators.png "Voting Power Distribution")
 {% else %}
 There are no validators.
 {% endif %}
